--- a/index.html
+++ b/index.html
@@ -150,9 +150,8 @@
                 <h2 class="h1-responsive fw-bold text-center my-2">
                     About
                 </h2>
-                <p class="text-center w-responsive mx-auto mb-1">Do you have any questions? Please do not hesitate to
-                    contact us directly. Our team will come back to you within
-                    a matter of hours to help you.
+                <p class="text-center w-responsive mx-auto mb-1">
+                    About Section
                 </p>
 
                 <div class="row  pt-5 pb-5">
@@ -199,9 +198,8 @@
             <h2 class="h1-responsive fw-bold text-center my-2">
                 Courses
             </h2>
-            <p class="text-center w-responsive mx-auto mb-1">Do you have any questions? Please do not hesitate to
-                contact us directly. Our team will come back to you within
-                a matter of hours to help you.
+            <p class="text-center w-responsive mx-auto mb-1">
+                Course section
             </p>
             <div class="row mt-5">
                 <div class="col-md-4">
@@ -250,10 +248,9 @@
             <h2 class="h1-responsive fw-bold text-center pt-2 my-2">
                 Gallery
             </h2>
-            <p class="text-center w-responsive mx-auto mb-1">Do you have any questions? Please do not hesitate to
-                contact us directly. Our team will come back to you within
-                a matter of hours to help you.
-            </p>
+            <p class="text-center w-responsive mx-auto mb-1">
+             gallery section   
+          </p>
             <div class="row pt-4">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <img src="https://cache.careers360.mobi/media/colleges/reviews/2020/3/23/95842/IMG-20191119-WA0003.jpg"
