--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 Courses
             </h2>
             <p class="text-center w-responsive mx-auto mb-1">
-                Course section
+                Courses section
             </p>
             <div class="row mt-5">
                 <div class="col-md-4">
